--- a/index.html
+++ b/index.html
@@ -50,7 +50,106 @@
             <h4>Focused Session</h4>
             <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
         </div>
-        <h3></h3>
+        <h3>Workshops & Seminars</h3>
+        <div>
+            <img src="interactive-learning.png" alt="lavender icon of text conversation">
+            <h4>Interactive Learning</h4>
+            <p>Participate in our interactive workshops and seminars that cover a range of topics, from goal setting to stress management. These events are designed to provide practical tools and strategies that you can implement in your daily life.
+            </p>
+        </div>
+        <h3>Online Courses</h3>
+        <div>
+            <img src="flexible-learning.png" alt="pink icon of a curly arrow">
+            <h4>Flexible Learning</h4>
+            <p>Access our online courses at your convenience. With video lessons, downloadable resources, and exercises, you can learn at your own pace from the comfort of your home.
+            </p>
+        </div>
+    </section>
+    <section id="why">
+        <h2>Why Choose Us</h2>
+        <ul>
+            <li>Personalized Approach</li>
+            <li>Proven Results</li>
+            <li>Supportive Environment</li>
+            <li>Flexible Options</li>
+        </ul>
+    </section>
+    <section id="pricing">
+        <h2>Pricing</h2>
+        <h3>One-on-One Coaching</h3>
+        <table>
+            <tr>
+                <th>Service</th>
+                <th>Cost</th>
+            </tr>
+            <tr>
+                <td>Single Session</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Monthly Package</td>
+                <td>$550</td>
+            </tr>
+            <tr>
+                <td>3-Month Package</td>
+                <td>$1500</td>
+            </tr>
+        </table>
+        <h3>Group Coaching</h3>
+        <table>
+            <tr>
+                <th>Service</th>
+                <th>Cost</th>
+            </tr>
+            <tr>
+                <td>Single Session</td>
+                <td>$75</td>
+            </tr>
+            <tr>
+                <td>Monthly Package</td>
+                <td>$250</td>
+            </tr>
+        </table>
+        <h3>Workshops & Seminars</h3>
+        <table>
+            <tr>
+                <th>Service</th>
+                <th>Cost</th>
+            </tr>
+            <tr>
+                <td>Single Workshop</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Seminar Series</td>
+                <td>$250</td>
+            </tr>
+        </table>
+        <h3>Online Courses</h3>
+        <table>
+            <tr>
+                <th>Service</th>
+                <th>Cost</th>
+            </tr>
+            <tr>
+                <td>Single Workshop</td>
+                <td>$150</td>
+            </tr>
+            <tr>
+                <td>Webinar Series</td>
+                <td>$250</td>
+            </tr>
+        </table>
+    </section>
+    <section id="first_step">
+        <h2>Take the First Step Today</h2>
+        <p>Your journey to a more fulfilling life begins with a single step. Book a free 30-minute consultation today to discover how our coaching services can help you achieve your goals. Let's work together to create the life you've always dreamed of!
+    </p>
+    <p><a>Schedule Now</a></p>
+    </section>
+    <section id="footer">
+        <p>Copyright 2024</p>
+    <p><a>Terms and Conditions</a></p>
     </section>
 </body>
 </html>
