CSS reset and some styling completed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Path to Success</title>
 </head>
 <body>
@@ -11,13 +12,15 @@
         <p>Unlock your full potential with personalized life coaching</p>
     </section>
     <section id="menu">
-        <h2>Menu</h2>
-        <ul>
-            <li>Our Services</li>
-            <li>Why Choose Us</li>
-            <li>Prices</li>
-            <li>Take the First Step</li>
-        </ul>
+        <nav>
+            <h2>Menu</h2>
+            <ul>
+                <li>Our Services</li>
+                <li>Why Choose Us</li>
+                <li>Prices</li>
+                <li>Take the First Step</li>
+            </ul>
+        </nav>
     </section>
     <section id="services">
         <h2>Our Services</h2>
@@ -147,9 +150,9 @@
     </p>
     <p><a>Schedule Now</a></p>
     </section>
-    <section id="footer">
+    <div id="footer">
         <p>Copyright 2024</p>
     <p><a>Terms and Conditions</a></p>
-    </section>
+    </div>
 </body>
 </html>
