--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <p>Unlock your full potential with personalized life coaching</p>
         </section>
             <nav>
-                <h2>Menu</h2>
+                <h2>MENU</h2>
                 <ul>
-                    <li>Our Services</li>
-                    <li>Why Choose Us</li>
-                    <li>Prices</li>
-                    <li>Take the First Step</li>
+                    <li>OUR SERVICES</li>
+                    <li>WHY CHOOSE US</li>
+                    <li>PRICES</li>
+                    <li>TAKE THE FIRST STEP</li>
                 </ul>
             </nav>
     </header>
@@ -51,7 +51,7 @@
             </div>
             <div>
                 <img src="focused-session.png" alt="teal icon of a clock face">
-                <h4>Focused Session</h4>
+                <h4>Focused Sessions</h4>
                 <p>Our group coaching sessions focus on specific themes such as confidence-building, time management, or work-life balance. Each session is designed to provide actionable takeaways that you can apply immediately.</p>
             </div>
             <h3>Workshops & Seminars</h3>
@@ -71,11 +71,11 @@
         </section>
         <section id="why">
             <h2>Why Choose Us</h2>
-            <ul>
-                <li>Personalized Approach</li>
-                <li>Proven Results</li>
-                <li>Supportive Environment</li>
-                <li>Flexible Options</li>
+            <ul class="reasons">
+                <li id="personalized" >Personalized<br> Approach</li>
+                <li id="proven" >Proven Results</li>
+                <li id="supportive" >Supportive<br> Environment</li>
+                <li id="flexible" >Flexible Options</li>
             </ul>
         </section>
         <section id="pricing">
